# komputer-operator/api/v1alpha1/zz_generated.deepcopy.go
@@ -69,6 +69,11 @@ func (in *AgentConfigSpec) DeepCopyInto(out *AgentConfigSpec) {
 		*out = new(v1.Duration)
 		**out = **in
 	}
+	if in.TaskTimeout != nil {
+		in, out := &in.TaskTimeout, &out.TaskTimeout
+		*out = new(v1.Duration)
+		**out = **in
+	}
 	if in.PodSpec != nil {
 		in, out := &in.PodSpec, &out.PodSpec
 		*out = new(corev1.PodSpec)
@@ -254,6 +259,14 @@ func (in *KomputerAgentStatus) DeepCopyInto(out *KomputerAgentStatus) {
 		in, out := &in.DeleteExpiresAt, &out.DeleteExpiresAt
 		*out = (*in).DeepCopy()
 	}
+	if in.TaskStartedAt != nil {
+		in, out := &in.TaskStartedAt, &out.TaskStartedAt
+		*out = (*in).DeepCopy()
+	}
+	if in.TaskExpiresAt != nil {
+		in, out := &in.TaskExpiresAt, &out.TaskExpiresAt
+		*out = (*in).DeepCopy()
+	}
 	if in.Conditions != nil {
 		in, out := &in.Conditions, &out.Conditions
 		*out = make([]v1.Condition, len(*in))
@@ -344,6 +357,11 @@ func (in *KomputerAgentTemplateSpec) DeepCopyInto(out *KomputerAgentTemplateSpec
 	}
 	if in.DeleteTTL != nil {
 		in, out := &in.DeleteTTL, &out.DeleteTTL
+		*out = new(v1.Duration)
+		**out = **in
+	}
+	if in.TaskTimeout != nil {
+		in, out := &in.TaskTimeout, &out.TaskTimeout
 		*out = new(v1.Duration)
 		**out = **in
 	}
